--- a/ChinoolSolution/WebApp/Web.config
+++ b/ChinoolSolution/WebApp/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20190906084509.mdf;Initial Catalog=aspnet-WebApp-20190906084509;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+   <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20190906084509.mdf;Initial Catalog=aspnet-WebApp-20190906084509;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
