--- a/ChinoolSolution/WebApp/WebApp.csproj
+++ b/ChinoolSolution/WebApp/WebApp.csproj
@@ -222,6 +222,7 @@
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
+    <Content Include="Webconnectionstrings.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account\AddPhoneNumber.aspx.cs">
