--- a/ChinoolSolution/chinoolsystem.Data/chinoolsystem.Data.csproj
+++ b/ChinoolSolution/chinoolsystem.Data/chinoolsystem.Data.csproj
@@ -52,6 +52,9 @@
   <ItemGroup>
     <Compile Include="Entities\Artist.cs" />
     <Compile Include="Entities\Album.cs" />
+    <Compile Include="Entities\Genres.cs" />
+    <Compile Include="Entities\MediaType.cs" />
+    <Compile Include="Entities\Track.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
