--- a/ChinoolSolution/WebApp/Webconnectionstrings.config
+++ b/ChinoolSolution/WebApp/Webconnectionstrings.config
@@ -2,6 +2,6 @@
 
   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20190906084509.mdf;Initial Catalog=aspnet-WebApp-20190906084509;Integrated Security=True"
   providerName="System.Data.SqlClient" />
-  <add name ="ChinnlDB" connectionString ="Data Source=.; Initial Catalog=Chinook;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  <add name ="ChinookDB" connectionString ="Data Source=.; Initial Catalog=Chinook;Integrated Security=True" providerName="System.Data.SqlClient"/>
   
 </connectionStrings>
