--- a/ChinoolSolution/WebApp/WebApp.csproj
+++ b/ChinoolSolution/WebApp/WebApp.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -190,6 +191,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Account\Web.config" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="SamplePages\filterSearchPages.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -218,7 +220,6 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
-    <Content Include="SamplePages\flitersearchCRUD.aspx" />
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
@@ -362,12 +363,12 @@
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SamplePages\flitersearchCRUD.aspx.cs">
-      <DependentUpon>flitersearchCRUD.aspx</DependentUpon>
+    <Compile Include="SamplePages\filterSearchPages.aspx.cs">
+      <DependentUpon>filterSearchPages.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="SamplePages\flitersearchCRUD.aspx.designer.cs">
-      <DependentUpon>flitersearchCRUD.aspx</DependentUpon>
+    <Compile Include="SamplePages\filterSearchPages.aspx.designer.cs">
+      <DependentUpon>filterSearchPages.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -405,6 +406,16 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\chinoolsystem.Data\chinoolsystem.Data.csproj">
+      <Project>{873fff42-f510-4840-865a-58c44cec1cee}</Project>
+      <Name>chinoolsystem.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\chinoolsystem\chinoolsystem.csproj">
+      <Project>{1287123d-daa5-4bbb-bd03-978843e2bd49}</Project>
+      <Name>chinoolsystem</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
