--- a/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
+++ b/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
@@ -52,12 +52,7 @@
   <ItemGroup>
     <Compile Include="Entities\Album.cs" />
     <Compile Include="Entities\Artist.cs" />
-    <Compile Include="Entities\AspNetRole.cs" />
-    <Compile Include="Entities\AspNetUser.cs" />
-    <Compile Include="Entities\AspNetUserClaim.cs" />
-    <Compile Include="Entities\AspNetUserLogin.cs" />
     <Compile Include="Entities\Customer.cs" />
-    <Compile Include="Entities\C__MigrationHistory.cs" />
     <Compile Include="Entities\Employee.cs" />
     <Compile Include="Entities\Genre.cs" />
     <Compile Include="Entities\Invoice.cs" />
@@ -66,7 +61,7 @@
     <Compile Include="Entities\Playlist.cs" />
     <Compile Include="Entities\PlaylistTrack.cs" />
     <Compile Include="Entities\Track.cs" />
-    <Compile Include="POCOs\AlbumOfArtist.cs" />
+    <Compile Include="POCOs\AlbumsOfArtist.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
