--- a/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
+++ b/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Entities\PlaylistTrack.cs" />
     <Compile Include="Entities\Track.cs" />
     <Compile Include="POCOs\AlbumsOfArtist.cs" />
+    <Compile Include="POCOs\SelectionList.cs" />
+    <Compile Include="POCOs\TrackList.cs" />
+    <Compile Include="POCOs\UserPlaylistTrack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
