--- a/ChinookSolution/WebApp/Web.config
+++ b/ChinookSolution/WebApp/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings configSource="WebConnectionStrings.config">
     
   </connectionStrings>
-  <appSettings configSource="webappsetting.config"></appSettings>
+  <appSettings configSource="webapp.config"></appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
